Rettelser i tekst indhold

--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -47,14 +47,14 @@
         <div>
           <h2>Hvem er jeg?</h2>
           <p>
-            Mit navn er Anne-Sophie Falck Winther, & jeg er 21 år gammel. Jeg
+            Mit navn er Anne-Sophie Falck Winther, og jeg er 21 år gammel. Jeg
             bor i Søborg, lige udenfor København, sammen med min kæreste. Jeg
             kommer oprindeligt fra Hillerød, hvor jeg er vokset op i skøn
             familie på fem, hvoraf jeg har to ældre søskende. Når jeg ikke
             studerer eller arbejder, elsker jeg at bevæge mig i form af løb. Det
-            er en rar måde at mærke kroppen på & lade tankerne få frit løb. Løb
-            giver mig energi & glæde, & det er en vigtig del af mit velvære. Ud
-            over løb elsker jeg at tilbringe tid sammen med min familie, min
+            er en rar måde at mærke kroppen på og lade tankerne få frit løb. Løb
+            giver mig energi og glæde, og det er en vigtig del af mit velvære.
+            Ud over løb elsker jeg at tilbringe tid sammen med min familie, min
             kæreste og mine veninder.
           </p>
         </div>
