--- a/html/tema2.html
+++ b/html/tema2.html
@@ -53,8 +53,8 @@
             indholdsproduktion, digital kommunikation og responsivt webdesign.
           </p>
           <p>
-            Hovedfokusset i dette projekt var at jeg blev introduceret til
-            VScode herunder HTML & CSS. Derudover blev jeg introduceret for
+            Hovedfokusset i dette projekt var, at jeg blev introduceret til
+            VsCode herunder HTML og CSS. Derudover blev jeg introduceret for
             grundlæggende begreber såsom filformater, designkonventioner, grid,
             media queries, flex og ikke mindst vigtigheden i en god mappe
             struktur.
@@ -79,13 +79,12 @@
           />
           <h3>Wireframes</h3>
           <p>
-            Her ses det wireframe, vi fik udleveret. Som udgangspunkt koder man
-            altid mobil først, og derefter tilpasser man det til webformat.
-            Dette er betegnelsen for et responsivt design. Formålet med
-            responsivt design er at sikre, at brugeroplevelsen forbliver optimal
-            på tværs af forskellige enheder, herunder computere, tablets og
-            telefoner. Et responsivt design opnås ved hjælp af
-            medieforespørgsler (media queries).
+            Her ses det wireframe, vi fik udleveret som illustration til,
+            hvordan designet skulle se ud i både mobilformat og webformat. Som
+            udgangspunkt koder man altid mobil først, og derefter tilpasser man
+            det til webformat. Formålet med responsivt design er at sikre, at
+            brugeroplevelsen forbliver optimal på tværs af forskellige enheder.
+            Et responsivt design opnås ved hjælp af media queries.
           </p>
           <img
             src="../img/layoutdiagramtema2.png"
@@ -95,7 +94,7 @@
           />
           <h3>Layoutdiagrammer</h3>
           <p>
-            Her ses det Layoutdiagram, vi fik udleveret. Layoutdiagrammer er
+            Her ses det layoutdiagram, vi fik udleveret. Layoutdiagrammer er
             nyttige, fordi de giver et visuelt overblik over, hvordan en
             hjemmeside skal se ud. Dette gør også, at kodningsprocessen bliver
             mere overskuelig, da man kan få et overblik over, hvordan layoutet
@@ -114,17 +113,14 @@
         <div>
           <h2>Nye kompetencer:</h2>
           <ul>
-            <li>Billede formater</li>
-            <li>Javascript</li>
-            <li>Formgivning og kompositionsprincipper</li>
-            <li>Design af UI og spil elementer</li>
-            <li>Designprincipper</li>
-            <li>Skitseringsteknikker og idegenererings taktikker</li>
-            <li>Paperprototype</li>
-            <li>CSS animation</li>
-            <li>UML aktivitetsprogrammer og State machine diagrammer</li>
-            <li>Individuel projektudvikling</li>
-            <li>Research</li>
+            <li>Introduktion til Figma</li>
+            <li>Filformater</li>
+            <li>Designkonventioner</li>
+            <li>Intro til HTML og CSS - herunder validering</li>
+            <li>Responsivt design med tilgangen "mobile first"</li>
+            <li>Ophavsret</li>
+            <li>Billedbehandling</li>
+            <li>Introduktion til Filezilla</li>
           </ul>
         </div>
       </section>
