--- a/html/tema3.html
+++ b/html/tema3.html
@@ -46,11 +46,11 @@
             height="900"
           />
           <p>
-            Tema 3 havde til formål at give mig en grundlæggende forståelse af
+            Tema 3 havde til formål at give mig en grundlæggende forståelse for
             samspillet mellem brugeren og brugergrænseflader. Jeg blev
             introduceret til teorier, værktøjer og metoder, der anvendes til
             research, design og test i en digital produktudviklingsproces. Dette
-            gav mig en relevant forståelse af vigtigheden af at træffe
+            gav mig en relevant forståelse for vigtigheden af at træffe
             designvalg og udvikle produkter baseret på konkrete indsigter om
             faktiske brugere fremfor antagelser og designvalg uden belæg.
           </p>
@@ -76,11 +76,11 @@
           <p>
             Her ses et udklip af min design- og researchproces. Inden jeg kunne
             begynde at kode mit emneside, lavede jeg en omfattende research. Jeg
-            udførte blandt andet en desktop research på eksisterende hjemmesider
-            om trends og boligindretning. Derefter lavede jeg et moodboard for
-            at visualisere mine idéer og en styletile, hvor jeg fastlagde
-            farver, knapper og skrifttyper. Jeg valgte tre værdiord for mit
-            design: stilrent, moderne og enkelt.
+            udførte blandt andet desktop research på eksisterende hjemmesider om
+            trends og boligindretning. Derefter lavede jeg et moodboard for at
+            visualisere mine idéer og en styletile, hvor jeg fastlagde farver,
+            knapper og skrifttyper. Jeg valgte tre værdiord for mit design:
+            Stilrent, moderne og enkelt.
           </p>
           <p>
             Derefter definerede jeg målgruppen for siden, både primær- og
