--- a/html/tema4.html
+++ b/html/tema4.html
@@ -59,14 +59,14 @@
           <p>
             I dette tema blev jeg også gjort bekendt med aktivitetsdiagrammer og
             state machine diagrammer, skitseringsteknikker,
-            idé-genereringstaktikker, paperprototypes, CSS-positionering,
-            CSS-animation osv.
+            idé-genereringstaktikker, paperprototypes, CSS-positionering og
+            CSS-animation.
           </p>
           <p>
             I denne opgave blev jeg virkelig sat på prøve. JavaScript-animation
             var et betydeligt højere niveau ift. kodning end de tidligere
-            opgaver. Derudover var jeg udfordret med at holde hovedet koldt samt
-            at bibeholde et overblik over processen.
+            opgaver. Derudover var jeg udfordret med at holde hovedet koldt,
+            samt at bibeholde et overblik over processen.
           </p>
         </div>
         <div>
@@ -86,7 +86,7 @@
             yderligere pointoptjening ved gentagne klik på samme kløver-element.
             Elementet får klassen "frys", og spriten får klassen "forsvind" for
             at fjerne animationen. Point øges og bliver opdateret på skærmen.
-            Der lyttes herefter efter afslutningen af animationen, og funktionen
+            Der lyttes herefter efter afslutningen af animationen og funktionen
             "resetKlover" aktiveres.
           </p>
           <img
