--- a/html/tema5.html
+++ b/html/tema5.html
@@ -48,12 +48,11 @@
           />
           <p>
             Tema 5 havde til formål at give mig et grundlæggende indblik i
-            indholdsproduktion - herunder præproduktion, selve produktion og
-            postproduktion. Her blev jeg præsenteret for optagelse af video med
-            ekstern lyd, Premiere Pro og Audition til redigering. Derudover blev
-            jeg også introduceret til filformater, HTML forms/videotags i HTML,
-            GitHub og relevante begreber inden for videoproduktion. I dette tema
-            fik vi stillet to forskellige opgaver.
+            indholdsproduktion. Her blev jeg præsenteret for optagelse af video
+            med ekstern lyd, Premiere Pro og Audition til redigering. Derudover
+            blev jeg også introduceret til filformater, HTML forms/videotags i
+            HTML, GitHub og relevante begreber inden for videoproduktion. I
+            dette tema fik vi stillet to forskellige opgaver.
           </p>
           <p>
             I den første opgave skulle jeg lave et "Passionsite", altså en
@@ -140,10 +139,10 @@
           <h3>Udklip fra trello board</h3>
           <p>
             Dette er et udklip fra vores Trello-board. Trello-boardet var en
-            stor hjælp under vores gruppeprojekt, da det var med til at skabe
+            stor hjælp under vores gruppeprojekt, idet det var med til at skabe
             overblik over, hvilke ting der manglede at blive lavet, samt hvilke
-            ting vi var kommet i mål med. Derudover hjalp det også med, at vi
-            kunne opretholde overblikket gennem hele projektet.
+            ting vi var kommet i mål med. Derudover hjalp det også med at
+            opretholde overblikket gennem hele projektet.
           </p>
         </div>
       </section>
