--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <section class="grid1_1-1">
         <h1>VELKOMMEN.</h1>
         <p>
-          Mit navn er Anne-Sophie Falck Winther & jeg læser til
-          Multimediedesigner på KEA. Dette er min digitale portfølge & her vil
-          jeg dele mine kreative projekter og erfaringer.
+          Mit navn er Anne-Sophie Falck Winther & jeg læser Multimediedesign på
+          KEA. Dette er min digitale portfolio & her vil jeg dele mine kreative
+          projekter og erfaringer.
         </p>
         <img
           src="/img/Index_billede.png"
