billederne har fået nyt format

--- a/html/tema2.html
+++ b/html/tema2.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img/logo_endelige.svg"
+            src="../img med webp/logo_endelige.svg"
             alt="Logo"
             height="50"
             width="50"
@@ -40,7 +40,7 @@
         <div>
           <h2>Grundlæggende web</h2>
           <img
-            src="../img/billedetema2.png"
+            src="../img med webp/billedetema2.webp"
             alt="billede 1"
             width="900"
             height="900"
@@ -72,7 +72,7 @@
         <div>
           <h2>Responsivt design</h2>
           <img
-            src="../img/wireframetema2.png"
+            src="../img med webp/wireframetema2.webp"
             alt="billede 2"
             width="900"
             height="900"
@@ -87,7 +87,7 @@
             Et responsivt design opnås ved hjælp af media queries.
           </p>
           <img
-            src="../img/layoutdiagramtema2.png"
+            src="../img med webp/layoutdiagramtema2.webp"
             alt="billede 2"
             width="900"
             height="900"
