--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
   <body>
     <header>
       <div class="logo">
-        <a href="img/logo_endelige.svg">
-          <img src="img/logo_endelige.svg" alt="Logo" height="50" width="50" />
+        <a href="img med webp/logo_endelige.svg">
+          <img
+            src="img med webp/logo_endelige.svg"
+            alt="Logo"
+            height="50"
+            width="50"
+          />
         </a>
       </div>
       <input type="checkbox" id="menu-toggle" />
@@ -38,13 +43,13 @@
           projekter og erfaringer.
         </p>
         <img
-          src="/img/Index_billede.png"
+          src="/img med webp/Index_billede.webp"
           alt="Billede af mig"
           height="1000"
           width="1000"
         />
         <img
-          src="/img/Index_billede.png"
+          src="/img med webp/Index_billede.webp"
           alt="Billede af mig"
           height="1000"
           width="1000"
