gammel billedemappe slettet

--- a/html/projekter.html
+++ b/html/projekter.html
@@ -85,7 +85,7 @@
         <div class="image-container">
           <a href="tema5.html">
             <img
-              src="../img/tema0.5.png"
+              src="../img med webp/tema0.5.webp"
               alt="Billede af Tema 5"
               class="image"
             />
