ændret sti til billederne, samt mappe navn

--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img med webp/logo_endelige.svg"
+            src="../img/logo_endelige.svg"
             alt="Logo"
             height="100"
             width="100"
@@ -39,7 +39,7 @@
 
       <section class="gridtema3_1-1">
         <img
-          src="../img med webp/portræt.webp"
+          src="../img/portræt.webp"
           alt="Billede 2"
           width="500"
           height="500"
@@ -61,7 +61,7 @@
       </section>
       <section class="grid2_1-1">
         <img
-          src="../img med webp/kaffebillede.webp"
+          src="../img/kaffebillede.webp"
           alt="Billede 1"
           width="500"
           height="500"
@@ -83,7 +83,7 @@
       </section>
       <section class="gridtema4_1-1">
         <img
-          src="../img med webp/feriebillede.webp"
+          src="../img/feriebillede.webp"
           alt="Billede 3"
           width="500"
           height="500"
