--- a/html/projekter.html
+++ b/html/projekter.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img med webp/logo_endelige.svg"
+            src="../img/logo_endelige.svg"
             alt="Logo"
             height="50"
             width="50"
@@ -40,7 +40,7 @@
         <div class="image-container">
           <a href="tema2.html">
             <img
-              src="../img med webp/tema0.2.webp"
+              src="../img/tema0.2.webp"
               alt="Billede af Tema 2"
               class="image"
             />
@@ -55,7 +55,7 @@
         <div class="image-container">
           <a href="tema3.html">
             <img
-              src="../img med webp/tema0.3.webp"
+              src="../img/tema0.3.webp"
               alt="Billede af Tema 3"
               class="image"
             />
@@ -70,7 +70,7 @@
         <div class="image-container">
           <a href="tema4.html">
             <img
-              src="../img med webp/tema.04.webp"
+              src="../img/tema.04.webp"
               alt="Billede af Tema 4"
               class="image"
             />
@@ -85,7 +85,7 @@
         <div class="image-container">
           <a href="tema5.html">
             <img
-              src="../img med webp/tema0.5.webp"
+              src="../img/tema0.5.webp"
               alt="Billede af Tema 5"
               class="image"
             />
