--- a/html/tema3.html
+++ b/html/tema3.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img med webp/logo_endelige.svg"
+            src="../img/logo_endelige.svg"
             alt="Logo"
             height="50"
             width="50"
@@ -40,7 +40,7 @@
         <div>
           <h2>Grundlæggende UX/UI</h2>
           <img
-            src="../img med webp/tema3.webp"
+            src="../img/tema3.webp"
             alt="billede 1"
             width="900"
             height="900"
@@ -68,7 +68,7 @@
         <div>
           <h2>Design og research</h2>
           <img
-            src="../img med webp/procesbilledetema3.webp"
+            src="../img/procesbilledetema3.webp"
             alt="billede 2"
             width="900"
             height="900"
@@ -99,7 +99,7 @@
             begyndte at kode.
           </p>
           <h3>Test resultater</h3>
-          <img src="../img med webp/procesbilledetema3.0.webp" alt="Billede fra test" />
+          <img src="../img/procesbilledetema3.0.webp" alt="Billede fra test" />
         </div>
       </section>
       <section class="gridnederst_1-1">
