--- a/html/tema4.html
+++ b/html/tema4.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img med webp/logo_endelige.svg"
+            src="../img/logo_endelige.svg"
             alt="Logo"
             height="50"
             width="50"
@@ -40,7 +40,7 @@
         <div>
           <h2>Animation</h2>
           <img
-            src="../img med webp/tema4.webp"
+            src="../img/tema4.webp"
             alt="billede 1"
             width="900"
             height="900"
@@ -72,7 +72,7 @@
         <div>
           <h2>Eksempel på kode i Javascript</h2>
           <img
-            src="../img med webp/procesbilledetema4.webp"
+            src="../img/procesbilledetema4.webp"
             alt="billede 2"
             width="900"
             height="900"
@@ -90,7 +90,7 @@
             "resetKlover" aktiveres.
           </p>
           <img
-            src="../img med webp/procesbilledetema4.resetklover.webp"
+            src="../img/procesbilledetema4.resetklover.webp"
             alt="billede 2"
             width="900"
             height="900"
