--- a/html/tema5.html
+++ b/html/tema5.html
@@ -12,7 +12,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="../img med webp/logo_endelige.svg"
+            src="../img/logo_endelige.svg"
             alt="Logo"
             height="50"
             width="50"
@@ -41,7 +41,7 @@
           <h2>Grundlæggende indhold</h2>
           <h3>Passionsite</h3>
           <img
-            src="../img med webp/tema5.webp"
+            src="../img/tema5.webp"
             alt="billede 1"
             width="900"
             height="900"
@@ -72,7 +72,7 @@
         <div>
           <h2>Mit storyboard</h2>
           <img
-            src="../img med webp/skitser_tema5.webp"
+            src="../img/skitser_tema5.webp"
             alt="billede 1"
             width="900"
             height="900"
@@ -94,7 +94,7 @@
           <h2>Grundlæggende indhold</h2>
           <h3>Virksomhedssite</h3>
           <img
-            src="../img med webp/tema5gruppe.webp"
+            src="../img/tema5gruppe.webp"
             alt="billede 1"
             width="900"
             height="900"
@@ -123,7 +123,7 @@
         <div>
           <h2>Logo tegnet i Adobe Illustrator</h2>
           <img
-            src="../img med webp/redesignlogo5.webp"
+            src="../img/redesignlogo5.webp"
             alt="billede 1"
             width="900"
             height="900"
@@ -136,7 +136,7 @@
             jeg først havde lavet på papir.
           </p>
           <img
-            src="../img med webp/trelloboardtema5.webp"
+            src="../img/trelloboardtema5.webp"
             alt="Billede af trello"
           />
           <h3>Udklip fra trello board</h3>
