--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           projekter og erfaringer.
         </p>
         <img
-          src="/img/Index_billede.webp"
+          src="/img/index_billede.webp"
           alt="Billede af mig"
           height="1000"
           width="1000"
