--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           width="1000"
         />
         <img
-          src="/img/Index_billede.webp"
+          src="/img/index_billede.webp"
           alt="Billede af mig"
           height="1000"
           width="1000"
