--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <nav>
         <ul class="menu">
           <li><a href="index.html">Forside</a></li>
-          <li><a href="../html/projekter.html">Projekter</a></li>
-          <li><a href="../html/om_mig.html">Om mig</a></li>
+          <li><a href="html/projekter.html">Projekter</a></li>
+          <li><a href="html/om_mig.html">Om mig</a></li>
         </ul>
       </nav>
     </header>
@@ -38,13 +38,13 @@
           projekter og erfaringer.
         </p>
         <img
-          src="/img/index_billede.webp"
+          src="img/index_billede.webp"
           alt="Billede af mig"
           height="1000"
           width="1000"
         />
         <img
-          src="/img/index_billede.webp"
+          src="img/index_billede.webp"
           alt="Billede af mig"
           height="1000"
           width="1000"
