ændrigner i billede str

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="menu-icon-line"></div>
         <div class="menu-icon-line"></div>
         <div class="menu-icon-line"></div>
-      </label> 
+      </label>
       <nav>
         <ul class="menu">
           <li><a href="index.html">Forside</a></li>
@@ -37,18 +37,8 @@
           KEA. Dette er min digitale portfolio & her vil jeg dele mine kreative
           projekter og erfaringer.
         </p>
-        <img
-          src="img/index_billede.webp"
-          alt="Billede af mig"
-          height="1000"
-          width="1000"
-        />
-        <img
-          src="img/index_billede.webp"
-          alt="Billede af mig"
-          height="1000"
-          width="1000"
-        />
+        <img src="img/index_billede.webp" alt="Billede af mig" />
+        <img src="img/index_billede.webp" alt="Billede af mig" />
       </section>
     </main>
     <hr />
