nyt grid tilføjet

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           KEA. Dette er min digitale portfolio & her vil jeg dele mine kreative
           projekter og erfaringer.
         </p>
+      </section>
+      <section class="grid1_1-1">
         <img src="img/index_billede.webp" alt="Billede af mig" />
         <img src="img/index_billede.webp" alt="Billede af mig" />
       </section>
