--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </p>
       </section>
       <section class="grid1_1-1">
-        <img src="img/index_billede.webp" alt="Billede af mig" />
-        <img src="img/index_billede.webp" alt="Billede af mig" />
+        <img src="/img/index_billede.webp" alt="Billede af mig" />
+        <img src="/img/index_billede.webp" alt="Billede af mig" />
       </section>
     </main>
     <hr />
