--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           KEA. Dette er min digitale portfolio & her vil jeg dele mine kreative
           projekter og erfaringer.
         </p>
-        <img src="img/fbillede.webp" alt="Portræt" width="900" height="1000" />
-        <img src="img/fbillede.webp" alt="Portræt" width="900" height="1000" />
+        <img src="img/fbillede.webp" alt="Portræt" />
+        <img src="img/fbillede.webp" alt="Portræt" />
       </section>
     </main>
     <hr />
